# postfix-redis-tcp-map

./: .gitignore  .gitmodules  Makefile  Makefile.am  README  README.md  client.c  config.c  config.h  configure.ac  debian_control.in  ldap.c  main.c  mysql.c  pgsql.c  postfix-redis  postfix-redis-tcp-map.spec  postfix-redis.cfg  postfix-redis.cfg.example  postfix-redis.cfg.sample  postfix-redis.service  redis.c  tcp_mapper.h  test_postfix_redis.py
